Misc fix and cleanup